fix: axislabels misalignment issue due to scichart.js version

--- a/tools/index6.css
+++ b/tools/index6.css
@@ -46,7 +46,7 @@ table tr {
 
 .notify-bullet:before {
   opacity: 0;
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   z-index: 1;
@@ -60,7 +60,7 @@ table tr {
   box-shadow: 0 0 10px red;
   animation: scaletrans 0.6s ease-out infinite alternate;
   transform: scale(1);
-  transition: opacity .25s ease-in;
+  transition: opacity 0.25s ease-in;
 }
 
 .notify-bullet.active:before {
@@ -81,7 +81,7 @@ table tr {
 }
 
 #fileReadingProgression .progression {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   top: 0;
@@ -94,13 +94,12 @@ table tr {
   transition: all 1s ease-out;
 }
 
-
 .historical-order-table-header th {
   text-align: left;
 }
 
 .historical-order-line:hover {
-  background: var(--dark2);  
+  background: var(--dark2);
 }
 
 .historical-order-line td:nth-child(1),
@@ -156,7 +155,6 @@ table {
   right: 0;
   z-index: 10000;
 }
-
 
 .order-status-CLOSED_BY_SL {
   color: var(--red);
@@ -262,17 +260,6 @@ table {
   span:last-child {
     display: inline;
   }
-}
-
-#hidder {
-  display: none;
-  left: 800px;
-  right: 69px;
-  top: 0;
-  bottom: 24px;
-  background: #141515;
-  z-index: 1;
-  position: absolute;
 }
 
 .tools,
